<resources>
    <string name="app_name">Microdream</string>
    <string name="permissions">系统初始化需要以下权限:\n1.本地存储权限</string>
    <string name="permissions_photo">图片选择需要以下权限:\n1.访问设备上的照片\n2.拍照</string>
    <string name="about_copyright">Microdream 微梦想 版权所有\nCopyright ©2020-%1$s Microdream.\nAll Rights Reserved.</string>
    <string name="microdream_web">https://www.liuyanggang.com</string>
    <string name="feedback_web">https://www.liuyanggang.com/feedback/</string>

    <string name="heartinfo">如果事与愿违\n相信上天会有更好的安排</string>
    <string name="memories">目之所及，皆是回忆\n心之所想，皆是过往\n眼之所看，皆是遗憾</string>
    <string name="login_timeout">登录状态已过期\n请重新登录</string>


    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登 录</string>
    <string name="Remember_the_password">记住状态</string>
    <string name="registered">注册账号</string>
    <string name="forget_password">忘记密码</string>
    <string name="logining_text">登陆中</string>
    <string name="edit_username">账号</string>
    <string name="edit_password">密码(长度6&#8211;16)</string>
    <string name="edit_enter_password">确认密码</string>
    <string name="edit_tel">电话</string>
    <string name="edit_nikename">昵称</string>
    <string name="edit_email">邮箱</string>
    <string name="registeren_info">注：新用户注册密码统一为123456</string>
    <string name="sex">性别</string>
    <string name="registered_success">注册成功</string>
    <string name="selfinfo">个人信息</string>
    <string name="menu">菜单</string>
    <string name="change_password">密码修改</string>
    <string name="feedback">反馈</string>
    <string name="about">关于</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_cache_success">缓存清除成功</string>
    <string name="sign_out">退出登录</string>
    <string name="username_info">账号：</string>
    <string name="version">Version</string>
    <string name="update">检查更新</string>
    <string name="new_password">新密码</string>
    <string name="old_password">旧密码</string>
    <string name="ok">确定</string>
    <string name="cancel">关闭</string>
    <string name="choose_photo">从相册选择照片</string>
    <string name="choose_video">从相册选择视频</string>
    <string name="mood_edit">这一刻的想法&#8230;</string>
    <string name="error">加载错误,点我刷新</string>
    <string name="empty">暂无数据</string>
    <string name="remind">提示</string>
    <string name="loading">加载中</string>
    <string name="time_ag">2020&#8211;05&#8211;26 16:22:00</string>
    <string name="delete">删除</string>
    <string name="account_registration_time">账号注册时间</string>
    <string name="last_password_modification_time">上次密码修改时间</string>
    <string name="getdata">获取数据ing</string>

    <string name="shennlu">申论资料</string>
    <string name="xingce">行测资料</string>
    <string name="changshi">常识资料</string>
    <string name="mianshi">面试资料</string>
    <string name="shiti">试题资料</string>
    <string name="module_name">模块名称</string>

    <string name="test">测试\n测试\n测试\n测试\n测试\n测试\n测试</string>
    <string name="avatar">头像</string>
    <string name="title">标题</string>
    <string name="rest_post_invalid_page_number">请求的页码大于总页数。</string>

    // 好友
    <string name="blacklist">黑名单</string>
    <string name="request_agree">同意</string>
    <string name="request_accepted">已接受</string>
    <string name="request_waiting">等待验证</string>
    <string name="add_friend">添加好友</string>
    <string name="add_group">添加群聊</string>
    <string name="start_conversation">发起会话</string>
    <string name="create_group_chat">创建群聊</string>
    <string name="create_chat_room">创建聊天室</string>
    <string name="create_private_group">创建讨论组</string>
    <string name="hint_add_user_id">请输入ID</string>
    <string name="hint_add_wording">请输入验证消息</string>
    <string name="contact_add">添加</string>
    <string name="user_id">对方ID</string>
    <string name="add_wording">验证消息</string>
    <string name="tips_empty_group_member">请选择群成员</string>
    <string name="tips_empty_group_type">请选择加群方式</string>
    <string name="no_friend_apply">暂无好友申请</string>
    <string name="top_info">顶部</string>
    <string name="bottom_info">最底部</string>
</resources>
