<?xml version="1.0" encoding="utf-8"?>
<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/qmui_topbar_height"
        android:fitsSystemWindows="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registeren_info"
                    android:textColor="@color/mistyrose"
                    android:textSize="20sp"
                    android:textStyle="bold">

                </TextView>

                <EditText
                    android:id="@+id/edit_username"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/edit_border_background"
                    android:drawableStart="@mipmap/user"
                    android:drawablePadding="10dp"
                    android:hint="@string/edit_username"
                    android:inputType="text"
                    android:padding="4dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/mistyrose"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edit_nikename"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/edit_border_background"
                    android:drawableStart="@mipmap/heart"
                    android:drawablePadding="10dp"
                    android:hint="@string/edit_nikename"
                    android:inputType="text"
                    android:padding="4dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/mistyrose"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edit_tel"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/edit_border_background"
                    android:drawableStart="@mipmap/phone"
                    android:drawablePadding="10dp"
                    android:hint="@string/edit_tel"
                    android:inputType="phone"
                    android:padding="4dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/mistyrose"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/edit_border_background"
                    android:drawableStart="@mipmap/mail"
                    android:drawablePadding="10dp"
                    android:hint="@string/edit_email"
                    android:inputType="textEmailAddress"
                    android:padding="4dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/mistyrose"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/edit_sex"
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:background="@drawable/edit_border_background"
                    android:drawableStart="@mipmap/sex"
                    android:drawableEnd="@mipmap/caret_down"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/sex"
                    android:padding="4dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/mistyrose"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_registered"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/login_button_background"
                    android:text="@string/registered"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>