<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="-10dp"
        android:layout_marginRight="-10dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="gradient_animated_background.json"
        app:lottie_loop="true" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:contentDescription="@null"
        android:src="@mipmap/logo"
        app:layout_constraintBottom_toTopOf="@+id/copyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.2">

        <EditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:background="@color/touming"
            android:drawableStart="@mipmap/user"
            android:drawablePadding="10dp"
            android:hint="@string/input_username"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/mistyrose"
            android:textColorHint="@color/mistyrose"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/jshine_background" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:background="@color/touming"
            android:drawableStart="@mipmap/lock"
            android:drawablePadding="10dp"
            android:hint="@string/input_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:padding="8dp"
            android:textColor="@color/mistyrose"
            android:textColorHint="@color/mistyrose"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_button_background"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/Remember_the_password"
                android:textColor="@color/pink"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/registered"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="right"
                android:background="@drawable/transparent_button_background"
                android:text="@string/registered"
                android:textColor="@color/pink"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:background="@drawable/transparent_button_background"
            android:text="@string/forget_password"
            android:textColor="@color/pink"
            android:textSize="15sp"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/about_copyright"
        android:textColor="@color/mistyrose"
        android:padding="5dp"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>