<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#CC585858"
    android:gravity="center">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="balloons.json"
        app:lottie_loop="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:background="#00000000"
            android:src="@mipmap/close" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/old_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edit_border_background"
                android:drawableStart="@mipmap/lock"
                android:drawablePadding="10dp"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:padding="4dp"
                android:textColor="@color/white"
                android:textColorHint="@color/mistyrose"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edit_border_background"
                android:drawableStart="@mipmap/lock"
                android:drawablePadding="10dp"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:padding="4dp"
                android:textColor="@color/white"
                android:textColorHint="@color/mistyrose"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/new_enter_password"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/edit_border_background"
                android:drawableStart="@mipmap/lock"
                android:drawablePadding="10dp"
                android:hint="@string/edit_enter_password"
                android:inputType="textPassword"
                android:padding="4dp"
                android:textColor="@color/white"
                android:textColorHint="@color/mistyrose"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_change"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/login_button_background"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>