<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:orientation="horizontal">


    <com.qmuiteam.qmui.widget.QMUIRadiusImageView2
        android:id="@+id/avatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/logo"
        app:qmui_border_color="?attr/qmui_config_color_gray_6"
        app:qmui_border_width="1px"
        app:qmui_corner_radius="5dp"
        app:qmui_selected_border_color="?attr/qmui_config_color_gray_4"
        app:qmui_selected_border_width="1px"
        app:qmui_selected_mask_color="?attr/qmui_config_color_gray_8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nikeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/edit_nikename"
            android:textColor="#2378D5"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/homepage_background"
            android:text="@string/about_copyright"
            android:textSize="15sp" />

        <cn.bingoogolapple.photopicker.widget.BGANinePhotoLayout
            android:id="@+id/npl_item_moment_photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:bga_npl_itemCornerRadius="0dp"
            app:bga_npl_itemSpanCount="3"
            app:bga_npl_itemWhiteSpacing="4dp"
            app:bga_npl_itemWidth="0dp"
            app:bga_npl_otherWhiteSpacing="100dp"
            app:bga_npl_placeholderDrawable="@mipmap/bga_pp_ic_holder_light"
            app:bga_npl_showAsLargeWhenOnlyOne="true" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp">

            <FrameLayout
                android:id="@+id/list_item_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp" />

            <ImageView
                android:id="@+id/list_item_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:src="@drawable/video_click_play_selector" />

        </RelativeLayout>

        <TextView
            android:id="@+id/update_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/time_ag"
            android:textColor="@color/dimgrey" />

        <TextView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/transparent_button_background"
            android:text="@string/delete"
            android:textColor="@color/red" />
    </LinearLayout>
</LinearLayout>